[project]
name = "zju-notifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "zjuwebvpn>=0.2.1",
    "jieba>=0.42.1",
    "dingtalk-stream>=0.24.3",
    "alibabacloud-dingtalk>=2.2.35"
]
